style.css
/**     Navigation Bar       **/
#nav {
    z-index: 1;
    position: relative;
    width: 97.5%;
    height: 40px;
    background-color: #70a9a9;
    border-radius: 5px;
}
#nav a {
    color: white;
    font-size: 12px;
    font-weight: bold;
    font-family: Verdana, sans-serif;
    color: #ffffff;
    padding: 0px 10px 10px 10px;
    text-transform: uppercase;
    text-decoration: none;
}
#nav li {
    display: inline;
}
.pull-left {
    float:left;
    padding: 0px 0px 0px 25px;
    margin-left: 5px;
}
.pull-right {
    float:right;
    padding: 0px 25px 0px 0px;
    margin-right: 5px;
}
/**     News Box        **/
#news {
    position: relative;
    width: 97.5%;
    height: 500px;
    background-color: #5090aa;
    border-radius: 5px;
    margin-top: 10px;
}
/**     Media Box       **/
#media {
    position: relative;
    width: 100%;
    height: 50px;
    background-color: #668284;
    border-radius: 5px;
    margin-top: 490px;
    margin-bottom: 10px;
}

